# rules_bin_tools

./: BUILD.bazel  MODULE.bazel  README.md
examples/: MODULE.bazel
examples/basic/: BUILD.bazel  main.sh
tools/: BUILD.bazel  extensions.bzl
tools/alloydb_auth_proxy/: download.bzl
tools/helm/: BUILD.bazel  download.bzl
tools/kubectl/: download.bzl
