load("@buildifier_prebuilt//:rules.bzl", "buildifier")

buildifier(
    name = "lint",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    mode = "fix",
    tags = ["manual"],
)

buildifier(
    name = "lint_check",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
    tags = ["manual"],
)
