load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "basic",
    srcs = [
        "main.sh",
    ],
    data = [
        "@alloydb_auth_proxy_executable//:executable",
        "@helm_executable//:executable",
        "@kubectl_executable//:executable",
    ],
    env = {
        "ALLOYDB_AUTH_PROXY": "$(rootpath @alloydb_auth_proxy_executable//:executable)",
        "HELM": "$(rootpath @helm_executable//:executable)",
        "KUBECTL": "$(rootpath @kubectl_executable//:executable)",
    },
)
